# spotter-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  GOAL.md  LICENSE  README.md  deny.toml  xtask
.beads/: .gitignore  config.yaml  metadata.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
benches/: hot_paths.rs
docs/: crates-io-name-decision.md  crates-io-owner-request.md  release-readiness-audit.md  release-runbook.md  subcommand-parity-checklist.md
scripts/: check-ci-workflow.py  check-coverage-json.py  check-crate-roots.py  check-crates-io-release-ready.py  check-criterion-regression.py  check-fixtures-scrubbed.py  check-github-release-assets.py  check-github-release-config.py  check-hyperfine-json.py  check-install-smoke.sh  check-local-only.py  check-no-production-unwrap.py  check-parity-checklist.sh  check-release-complete.py  check-release-pr-signoff.py  check-release-workflow.py  check-rss.py  make-performance-fixtures.py  make-test-fixtures.py  test-crates-io-release-ready.py  test-github-release-assets.py  test-github-release-config.py  test-release-complete.py  test-release-pr-signoff.py
src/: analytics.rs  cli.rs  config.rs  db.rs  jsonl.rs  lib.rs  main.rs  paths.rs  scan.rs
tests/: cli_flag_parity.rs  cli_goldens.rs  cli_inspect_compare_aggregate.rs  cli_path_overrides.rs  cli_remaining_commands.rs  cli_scan.rs  cli_surface.rs  cli_sync_search.rs  jsonl_corpus.rs  schema_and_determinism.rs
tests/fixtures/large-reads/: large_reads.jsonl
tests/fixtures/transcripts/: short.jsonl  (+3 more)
tests/golden/: README.md  schema.sql
(+42 files in other folders)
