[package]
name = "spotter"
version = "0.1.5"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Standalone local analytics CLI for Claude Code JSONL transcripts"
readme = "README.md"
documentation = "https://docs.rs/spotter"

[dependencies]
anyhow = "=1.0.79"
chrono = { version = "=0.4.31", default-features = false, features = ["clock", "serde"] }
clap = { version = "=4.4.18", features = ["derive"] }
directories = "=5.0.1"
hex = "=0.4.3"
regex = "=1.10.2"
rusqlite = { version = "=0.30.0", features = ["bundled", "chrono"] }
serde = { version = "=1.0.195", features = ["derive"] }
serde_json = "=1.0.111"
sha2 = "=0.10.8"
signal-hook = "=0.3.17"
thiserror = "=1.0.56"
toml = "=0.8.8"
walkdir = "=2.4.0"

[dev-dependencies]
assert_cmd = "=2.0.12"
criterion = "=0.5.1"
predicates = "=3.0.4"
proptest = "=1.4.0"
tempfile = "=3.9.0"

[[bench]]
name = "hot_paths"
harness = false
